public class Station {
    public String getName() {
        return name;
    }

    private String name;

    public Station(String name) {
        this.name = name;
    }
}
