public enum VehicleFuel {
    GAS,
    HYBRID,
    ELECTRIC,
}
