public enum VehicleStatus {
    NEED_REPAIR,
    IN_OPERATION,
    FOR_SCRAP
}
