public enum VehicleType {
    BUS,
    TRAM,
    TROLLEYBUS
}
